--- a/about.qmd
+++ b/about.qmd
@@ -1,18 +1,15 @@
 ---
 title: "About"
-image: profile.jpg
+image: https://avatars.githubusercontent.com/u/52933455?v=4
 about:
   template: jolla
   links:
-    - icon: twitter
-      text: Twitter
-      href: https://twitter.com
     - icon: linkedin
       text: LinkedIn
-      href: https://linkedin.com
+      href: https://www.linkedin.com/in/juliapocciotti/
     - icon: github
       text: Github
-      href: https://github.com
+      href: https://github.com/juliapocciotti
 
 ---
 
