change about me page

--- a/posts/probability-calibration/prob_calibration.ipynb
+++ b/posts/probability-calibration/prob_calibration.ipynb
@@ -13,8 +13,9 @@
    "source": [
     "---\n",
     "author: \"Julia Pocciotti\"\n",
-    "date: \"2023-10-29\"\n",
+    "date: \"2023-11-01\"\n",
     "title-block-banner: false\n",
+    "image: newplot.png\n",
     "---"
    ]
   },
