--- a/about.qmd
+++ b/about.qmd
@@ -13,4 +13,9 @@ about:
 
 ---
 
-About this blog
+Hi there, I'm Julia! I currently work as a Data Scientist in the banking industry. 
+
+My journey into the world of Data Science began during my college years, and it was during this time that I became a member of [Turing USP](https://github.com/turing-usp). This is a student-led group at the University of São Paulo, dedicated to the realm of Artificial Intelligence. When I initially joined the group, I had little to no knowledge about AI, but we had a system that knowing the subjects first hand or not really didn't matter. The goal was to pick a topic that you found interesting, study it, and then share with the rest of the group. That way of learning really helped me, and to this day I believe that is the best way to learn something new.
+
+With that in mind, my ideia with this blog is to make as a way for me to better study topics I'm interested in, share notes on courses I'm taking, and also use it in general as a way to better structure thoughts and experiments I'm currently working on. 
+
