fix image on post

--- a/posts/everyday-pandas/everyday_pandas.ipynb
+++ b/posts/everyday-pandas/everyday_pandas.ipynb
@@ -6,9 +6,10 @@
    "source": [
     "---\n",
     "author: \"Julia Pocciotti\"\n",
-    "date: \"2023-11-01\"\n",
+    "date: \"2024-01-25\"\n",
     "title-block-banner: false\n",
-    "draft: true\n",
+    "draft: false\n",
+    "image: pandas_shot.png\n",
     "---"
    ]
   },
@@ -17,6 +18,7 @@
    "metadata": {},
    "source": [
     "# Everyday pandas\n",
+    "\n",
     "\n",
     "Pandas is probably the most used python library by any Data Scientist. It is the library that we use it everyday at work and `import pandas as pd` is usually the first thing we type into a notebook. Even though it's such a common tool, I feel like I'm always learning about new functions and ways to explore data in pandas that I didn't know of, specially looking back at how I used it when I first started interning and how I use it now. \n",
     "\n",
@@ -30,25 +32,6 @@
    "outputs": [],
    "source": [
     "import pandas as pd "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#| echo: false\n",
-    "\n",
-    "\n",
-    "functions\n",
-    "\n",
-    "- query \n",
-    "- qcut\n",
-    "- pivot\n",
-    "- chain functions \n",
-    "- unstack - migration analysis \n",
-    "- assign\n",
-    "- style - never run out of it \n",
-    "- pipe - putting it all together \n"
    ]
   },
   {
